adding some movies

--- a/movie.mustache
+++ b/movie.mustache
@@ -4,7 +4,7 @@
     <img class="movie__img" src="{{thumbPath}}" alt="movie picture"/>
     <figcaption class="movie__caption">
       <p class="movie__synopsis small"> {{synopsis}} </p>
-      <a href="#" class="movie__trailer"> watch trailer </a>
+      <a href="{{trailerLink}}" class="movie__trailer"> watch trailer </a>
     </figcaption>
   </figure>
 
