changing title and adding alt for images

--- a/assets/mustache/movie.mustache
+++ b/assets/mustache/movie.mustache
@@ -1,7 +1,7 @@
 <div id="{{title}}" class="card movie">
 
   <figure class="movie__fig">
-    <img class="movie__img" src="assets/{{thumbPath}}" alt="movie picture"/>
+    <img class="movie__img" src="assets/{{thumbPath}}" alt="{{title}} picture"/>
     <figcaption class="movie__caption">
       <p class="movie__synopsis small"> {{synopsis}} </p>
       <a href="{{trailerLink}}" class="movie__trailer"> watch trailer </a>
